1999-05-11  Jim Kingdon  <http://www.cyclic.com>

	* server.c (pserver_authenticate_connection): Call error_exit
	rather than reinventing the wheel ourselves.
	(switch_to_user): Check for errors from setuid, setgid, and
	initgroups.  Fix the #ifdef's (the previous code would skip the
	setuid call if SETXID_SUPPORT).

1999-05-10  Jim Kingdon  <http://www.cyclic.com>

	* server.c (serve_notify), edit.c (notify_do): Check for
	and reject characters which will get confused with delimiters.
	* sanity.sh (server): New tests server-7 through server-15 test
	for this and for other notify behaviors.

	* rcs.c (RCS_tag2rev): Also look for a physical branch with
	RCS_getversion.
	* sanity.sh (tagf): Adjust tagf-12 and following tests to test for
	the fixed behavior rather than the broken behavior.

1999-05-07  Jim Kingdon  <http://www.cyclic.com>

	* server.c (server_notify): Also set last_node to NULL.
	* sanity.sh (server): New tests server-6 and server-7, for this.

1999-05-05  Jim Kingdon  <http://www.cyclic.com>

	* rcs.c (rcs_internal_lockfile): Remove unused variable lockfile.

	* add.c (add): Look for directories with the same name in a
	different case where appropriate (analogous to fopen_case).
	In client code, add comment about how this doesn't do quite
	everything.

1999-05-03  Jim Meyering  <meyering@ascend.com>

	Remove rcs-style ,file, lock files upon signal.
	* rcs.c (rcs_lockfile): New file-scoped global.
	(rcs_cleanup): New function (similar to patch_cleanup).
	(rcs_internal_lockfile): Register rcs_cleanup the first time this
	function is called.  Rename uses of local `lockfile' to refer to new
	global, `rcs_lockfile'.  Don't free the lock file name string, now
	that it's global.
	(rcs_internal_unlockfile): Rename `lockfile', as above, and carefully
	free and NULL-out the global, rcs_lockfile.

1999-04-30  Jim Kingdon  <http://www.cyclic.com>

	* rcs.c (annotate_fileproc): Don't cast NULL in passing it to